--- a/templates/front.html.twig
+++ b/templates/front.html.twig
@@ -18,6 +18,7 @@
 
   <!-- Vendor CSS Files -->
   <link href="{{asset('front/vendor/aos/aos.css')}}" rel="stylesheet">
+  
   <link href="{{asset('front/vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
   <link href="{{asset('front/vendor/bootstrap-icons/bootstrap-icons.css')}}" rel="stylesheet">
   <link href="{{asset('front/vendor/boxicons/css/boxicons.min.css')}}" rel="stylesheet">
@@ -43,14 +44,14 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html"><img src="{{asset('front/img/logo pi 3.png')}}"></a></h1>
+        <h1><a href="{{path('app_utilisateur_indexfront')}}"><img src="{{asset('front/img/logo pi 3.png')}}"></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="{{asset('front/img/logo.png')}}" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="{{path('app_utilisateur_indexfront')}}">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
@@ -74,7 +75,14 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          {% if not app.user %}
           <li><a class="getstarted scrollto" href="{{path('app_utilisateur_signup')}}">S'inscrire</a></li>
+          <li><a class="getstarted scrollto" href="{{path('app_utilisateur_login')}}">Se connecter</a></li>
+          {% else %}         
+          <li><a class="getstarted scrollto" href="{{path('app_utilisateur_logout')}}">Déconnexion</a></li>
+          <li><a class="getstarted scrollto" href="{{path('app_utilisateur_editprofil',{'id':app.user.id})}}">Mon profil</a></li>
+          <li><i class="bi bi-cart"></i></li>
+          {% endif %}
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
