--- a/templates/produit/details.html.twig
+++ b/templates/produit/details.html.twig
@@ -14,11 +14,11 @@
         </tr>
         <tr>
             <th>Prix</th>
-            <td>{{ produit.prix }}</td>
+            <td>{{ produit.prix }}TDN</td>
         </tr>
         <tr>
             <th>PrixFinale</th>
-            <td>{{ produit.prixfinale }}</td>
+            <td>{{ produit.prixfinale }}TDN</td>
         </tr>
         <tr>
             <th>Description</th>
@@ -26,7 +26,7 @@
         </tr>
         <tr>
             <th>Profit</th>
-            <td>{{ produit.profit }}</td>
+            <td>{{ produit.profit }}%</td>
         </tr>
         <tr>
             <th>Categorie</th>
@@ -34,7 +34,7 @@
         </tr>
         <tr>
             <th>Promotion</th>
-            <td>{{ produit.idPromotion.percentage }}</td>
+            <td>{{ produit.idPromotion.percentage }}%</td>
         </tr>
         <tr>
             <th>Image</th>
