--- a/templates/categorie/Affiche.html.twig
+++ b/templates/categorie/Affiche.html.twig
@@ -3,14 +3,14 @@
 
 {% block body %}
     <div class="bg-light rounded h-100 p-4">
-        <h6 class="mb-4">Liste des Categorie</h6>
+        <h1 class="mb-4" align="center">Liste des Categorie</h1>
         {% for message in app.flashes('info') %}
             <div class="alert alert-success">
                 {{ message }}
             </div>
 
 {% endfor %}
-        <h4 style="font-weight: bold" >Nombre des Catégorie:({{ cc.getTotalItemCount }})</h4>
+        <h6 style="font-weight: bold" >Nombre des Catégorie:({{ cc.getTotalItemCount }})</h6>
         <table class="table">
             <thead>
             <tr>
@@ -18,13 +18,13 @@
                 <th>Name</th>
                 <th>DELETE</th><th>UPDATE</th>
                 <form action="{{ path('ajoutCategorie') }}" >
-                    <input type="submit" value="AjouterCategorie" class="btn btn-primary rounded-pill m-2">
+                    <input type="submit" value="AjouterCategorie" class="btn btn-primary w-100 m-2">
 
 
             </tr>
             </thead>
             <tbody>
-            {% for c in cc|reverse %}
+            {% for c in cc%}
                 <tr>
                     <td>{{ c.id }}</td>
                     <td>{{ c.nom }}</td>
@@ -38,7 +38,7 @@
             {% endfor %}
             </tbody>
         </table>
-        {{ knp_pagination_render(cc) }}
+        <button type="button" class="btn btn-secondary">{{ knp_pagination_render(cc) }}</button>
 
 
     </div>
