--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -24,7 +24,7 @@
                 <td>{{ event.dateEvent ? event.dateEvent|date('Y-m-d') : '' }}</td>
                 <td>{{ event.titre }}</td>
                 <td>{{ event.prix }}</td>
-                <td>{{ event.image }}</td>
+                <td> <<img class="w-100" src="{{ asset('images/'~ event.Image) }}" alt="Image de {{ event.Image }}"></td>
                 <td>{{ event.description }}</td>
                 <td>
                     <a href="{{ path('app_event_show', {'eventId': event.eventId}) }}">show</a>
