--- a/templates/event/indexf.html.twig
+++ b/templates/event/indexf.html.twig
@@ -4,21 +4,33 @@
 
 {% block body %}
     <h1>Event index</h1>
-
+    <div id="google_translate_element"></div>
+    <script type="text/javascript">// <![CDATA[
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+        }
+        // ]]></script>
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"></script>
     {% for event in events %}
         <div class=container>
             <div class=row>
-              titre :  <h2>{{ event.titre }}</h2>
-                <p>{{ event.prix }} DT</p>
+              <h2>{{ event.titre }}</h2>
+                Prix <p>{{ event.prix }} DT</p>
                description : <p>{{ event.description }} </p>
 
                le : {{ event.dateEvent ? event.dateEvent|date('m-d') : '' }}
+                <td> <<img class="w-100" src="{{ asset('images/'~ event.Image) }}" alt="Image de {{ event.Image }}"></td>
 
+                {% if event.nbPlaces < 20 %}
+                <a href="{{ path('app_reservation_new',{'prix': event.prix,'eventId': event.eventId}) }}"> <i class="bi bi-cart-plus"> reserver</i></a>
 
-                <a href="{{ path('app_reservation_new',{'prix': event.prix}) }}"> <i class="bi bi-cart-plus"> reserver</i></a>
-                <hr>
 
                 </a>
+                {% endif %}
+                <hr>
+            </div>
+            <div class="pagination pagination-lg" >
+                {{ knp_pagination_render(events) }}
             </div>
         </div>
     {% endfor %}
