--- a/templates/pointdevente/_form.html.twig
+++ b/templates/pointdevente/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form) }}
+{{ form_start(form,{ 'attr': {'novalidate': 'novalidate'}}) }}
     {{ form_widget(form, { 'attr': {'class': 'col-sm-2 col-form-label'}  }) }}
     <button class="btn"><i class="fas fa-edit"></i></button>
 {{ form_end(form) }}
