--- a/templates/blog/indexFront.html.twig
+++ b/templates/blog/indexFront.html.twig
@@ -1,12 +1,19 @@
 {% extends 'front.html.twig' %}
 
-{% block title %}Blog index{% endblock %}
+{% block title %}Liste des Blogs{% endblock %}
 
 {% block home%}
-    <h1>Blog index</h1>
 
+    <h1>Les Blogs:</h1>
+    {% for message in app.flashes('info') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+
+    {% endfor %}
     <table class="table" border="1">
         <thead>
+
         <tr>
 
             <th>Titre</th>
@@ -23,9 +30,9 @@
                 <td>{{ blog.titre }}</td>
                 <td>{{ blog.sujet }}</td>
                 <td>{{ blog.contenu }}</td>
-                <td>{{ blog.date }}</td>
+                <td>{{ blog.date|date }}</td>
                 <td>
-
+                    <a href="{{ path('AfficheFront') }}"><input type="submit" value="Details" class="btn btn-primary rounded-pill m-2"></a>
                 </td>
             </tr>
         {% else %}
@@ -35,5 +42,7 @@
         {% endfor %}
         </tbody>
     </table>
-
+    <td><a href="{{ path('listp') }}"  class="btn btn-primary w-100 m-2">Imprimer PDF</a> </td>
+    <td><a href="{{ path('excel') }}"  class="btn btn-primary w-100 m-2">Excel</a> </td>
+    {{ knp_pagination_render(blogs) }}
 {% endblock %}
