--- a/templates/blog/edit.html.twig
+++ b/templates/blog/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Edit Blog</h1>
 
-    {{ include('blog/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('blog/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('app_blog_index') }}">back to list</a>
+    <a href="{{ path('app_blog_index') }}"><input type="submit" value="Retour" class="btn btn-primary rounded-pill m-2"></a>
 
     {{ include('blog/_delete_form.html.twig') }}
 {% endblock %}
