--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -30,9 +30,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_blog_index') }}">back to list</a>
+    <a href="{{ path('app_blog_index') }}"><input type="submit" value="Retour" class="btn btn-primary rounded-pill m-2"></a>
 
-    <a href="{{ path('app_blog_edit', {'id': blog.id}) }}">edit</a>
+    <a href="{{ path('app_blog_edit', {'id': blog.id}) }}"><input type="submit" value="Modifier" class="btn btn-primary rounded-pill m-2"></a>
 
     {{ include('blog/_delete_form.html.twig') }}
 {% endblock %}
