--- a/templates/commentaire/edit.html.twig
+++ b/templates/commentaire/edit.html.twig
@@ -5,9 +5,10 @@
 {% block body %}
     <h1>Edit Commentaire</h1>
 
-    {{ include('commentaire/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('commentaire/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('app_commentaire_index') }}">back to list</a>
+
+    <a href="{{ path('app_commentaire_index') }}"><input type="submit" value="Retour" class="btn btn-primary rounded-pill m-2"></a>
 
     {{ include('commentaire/_delete_form.html.twig') }}
 {% endblock %}
