--- a/templates/commentaire/index.html.twig
+++ b/templates/commentaire/index.html.twig
@@ -1,10 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Commentaire index{% endblock %}
+{% block title %}Liste des Commentaires{% endblock %}
 
 {% block body %}
-    <h1>Commentaire index</h1>
+    <h1>Les commentaires:</h1>
+    {% for message in app.flashes('info') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
 
+    {% endfor %}
     <table class="table">
         <thead>
             <tr>
@@ -19,10 +24,10 @@
             <tr>
                 <td>{{ commentaire.id }}</td>
                 <td>{{ commentaire.contenu }}</td>
-                <td>{{ commentaire.date ? commentaire.date|date('Y-m-d') : '' }}</td>
+                <td>{{ commentaire.date|date }}</td>
                 <td>
-                    <a href="{{ path('app_commentaire_show', {'id': commentaire.id}) }}">show</a>
-                    <a href="{{ path('app_commentaire_edit', {'id': commentaire.id}) }}">edit</a>
+                    <a href="{{ path('app_commentaire_show', {'id': commentaire.id}) }}"><input type="submit" value="Details" class="btn btn-primary rounded-pill m-2"></a>
+                    <a href="{{ path('app_commentaire_edit', {'id': commentaire.id}) }}"><input type="submit" value="Modifier" class="btn btn-primary rounded-pill m-2"></a>
                 </td>
             </tr>
         {% else %}
@@ -33,7 +38,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_commentaire_new') }}">Create new</a>
+    <a href="{{ path('app_commentaire_new') }}"><input type="submit" value="Ajouter un commentaire" class="btn btn-primary rounded-pill m-2"></a>
     <a href="{{ path('AfficheCmntFront') }}">Front</a>
 
 {% endblock %}
