--- a/templates/commentaire/new.html.twig
+++ b/templates/commentaire/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Commentaire{% endblock %}
+{% block title %}Nouveau Commentaire{% endblock %}
 
 {% block body %}
-    <h1>Create new Commentaire</h1>
+    <h1>Ajouter Un Commentaire</h1>
 
     {{ include('commentaire/_form.html.twig') }}
 
-    <a href="{{ path('app_commentaire_index') }}">back to list</a>
+    <a href="{{ path('app_commentaire_index') }}"><input type="submit" value="Retour" class="btn btn-primary rounded-pill m-2"></a>
 {% endblock %}
